style: collapse grid-2 to single column at 1024px to prevent content overflow on tablets

--- a/css/style.css
+++ b/css/style.css
@@ -1169,6 +1169,9 @@ footer {
     display: inline-flex;
   }
   
+  .grid-2 {
+    grid-template-columns: 1fr;
+  }
   .grid-4 {
     grid-template-columns: repeat(2, 1fr);
   }
